# iCam

./: .gitignore  readme.md
Tiny1C_breakout/: readme.md
Tiny1C_breakout/gerber/: tiny1c_breakout.GBL  tiny1c_breakout.GBO  tiny1c_breakout.GBS  tiny1c_breakout.GML  tiny1c_breakout.GTL  tiny1c_breakout.GTO  tiny1c_breakout.GTS  tiny1c_breakout.TXT
Tiny1C_breakout/spacer/: tiny1c_breakout_spacer.scad  tiny1c_breakout_spacer.stl
Tiny1C_breakout/stencil/: tiny1c_breakout.GTP
Tiny1C_documentation/mechanical/: Tiny1C尺寸变更说明Dimensions Change Description.docx
firmware/: CMakeLists.txt  partitions_icam.csv  partitions_icam_mini.csv  readme.md  sdkconfig.old  sdkconfig_icam  sdkconfig_icam_mini  set_platform.sh
firmware/components/VL53L4CX/: CMakeLists.txt
firmware/components/aht20/: CMakeLists.txt  driver_aht20.c  driver_aht20.h  driver_aht20_interface.c
firmware/components/cmd/: cmd_list.h  (+3 more)
firmware/components/esp32_utilities/: CMakeLists.txt  cmd_handlers.c  cmd_handlers.h  out_state_utilities.c  out_state_utilities.h  ps_utilities.c  ps_utilities.h  sys_info.c  sys_info.h  sys_utilities.c  sys_utilities.h  time_utilities.c  time_utilities.h  wifi_utilities.c  wifi_utilities.h
firmware/components/esp32_web/: CMakeLists.txt  web_task.c  web_task.h  ws_cmd_utilities.c  ws_cmd_utilities.h
firmware/components/file/: CMakeLists.txt  file_render.c  file_render.h  file_task.c  file_task.h  file_utilities.c  file_utilities.h  tiny_jpeg.h  tjpgd.c  tjpgdcnf.h
firmware/components/gui/: CMakeLists.txt  gui_cmd_handlers.c  gui_cmd_handlers.h  gui_page_file_browser.c  gui_page_file_browser.h  gui_page_image.c  gui_page_image.h  gui_page_settings.c  gui_page_settings.h  gui_panel_ambient_atmospheric_t.c  gui_panel_ambient_atmospheric_t.h  gui_panel_ambient_distance.c  gui_panel_ambient_distance.h  gui_panel_ambient_reflected_t.c  gui_panel_ambient_reflected_t.h  gui_panel_ambient_sensor_comp.c  gui_panel_ambient_sensor_comp.h  gui_panel_file_browser_files.c  gui_panel_file_browser_files.h  gui_panel_file_browser_image.c  gui_panel_file_browser_image.h  gui_panel_image_controls.c  gui_panel_image_controls.h  gui_panel_image_main.c  gui_panel_image_main.h  gui_panel_settings_ambient.c  gui_panel_settings_ambient.h  gui_panel_settings_backlight.c  gui_panel_settings_backlight.h  gui_panel_settings_brightness.c  gui_panel_settings_brightness.h  gui_panel_settings_emissivity.c  gui_panel_settings_emissivity.h  gui_panel_settings_gain.c  gui_panel_settings_gain.h  gui_panel_settings_info.c  gui_panel_settings_info.h  gui_panel_settings_palette.c  gui_panel_settings_palette.h  gui_panel_settings_poweroff.c  (+75 more)
firmware/components/tiny1c/: CMakeLists.txt  all_config.h  data_rw.c  data_rw.h  falcon_cmd.c  falcon_cmd.h  t1c_i2c_hal.c  t1c_i2c_hal.h  t1c_task.c  t1c_task.h  t1c_tau.c  t1c_tau.h  tiny1c.c  tiny1c.h  vdcmd.c  vdcmd.h
firmware/emscripten/: CMakeLists.txt  cmd  gui  lvgl  lvgl_shell.html  palettes  readme.txt
firmware/emscripten/lv_drivers/: CMakeLists.txt  lv_drv_conf.h
firmware/emscripten/lv_drivers/sdl/: sdl.c  sdl.h  sdl_common.c  sdl_common.h
firmware/emscripten/main/: CMakeLists.txt  esp_system.h  gui_main.c  gui_main.h  main.c  web_cmd_utilities.c  web_cmd_utilities.h
firmware/main/: CMakeLists.txt  Kconfig  main.c  mon_task.c  mon_task.h  system_config.h
iCam/: readme.md
iCam/sensor_mount/: tiny1c_proto_mount.scad  tiny1c_proto_mount.stl
iCamMini/: readme.md
iCamMini/iCamCntrl_board/: readme.md
(+84 files in other folders)
